<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:id="@+id/ll_login_user_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_username_tips"
            android:textColor="@color/black"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="4"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_pwd_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login_user_name_edit"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password_tips"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="3"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_login_eyes"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/login_password_tips"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/btn_login_hide_eyes"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ll_login_pwd_edit"
        android:background="@drawable/sel_login_submit"
        android:padding="5dp"
        android:text="@string/login_submit_btn"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_submit"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_login_forgot_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_forgot_pwd_btn"
            android:textColor="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_btn"
            android:textColor="@color/blue_light" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_verification_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/login_verification_code_login_btn" />
</RelativeLayout>